Add SEO meta tags to index.html
Added meta tags for description and keywords to improve SEO.

--- a/SITE/index.html
+++ b/SITE/index.html
@@ -2,6 +2,14 @@
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8" />
+  <meta> name="descriptio"
+  content="CASH UPON DELIVERY - Saúde, Estética e Bem-Estar ao seu alcance,
+  E-books gratuitos, produtos naturais
+  e consultas personalizadas." />
+  <meta> name="keywords" content="saúde,
+  estétcia, bem-estar, e-books,
+  produtos naturais, emagrecimento,
+  beleza" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>CASH UPON DELIVERY – Saúde & Estética</title>
   <style>
@@ -226,4 +234,5 @@
     © 2025 CASH UPON DELIVERY – Saúde & Estética | Desenvolvido com 💚 e propósito.
   </footer>
 </body>
+
 </html>
